# be_embsys

./: README.md  S99app  autoupdate.sh  blink_long.sh  cryptprog.c  detect_key.sh  test  test.c  test2.c
autotools/: Makefile.am  autogen.sh  configure.ac
autotools/src/cryptprog/: Makefile  cryptprog.c  list.c  list.h
install_folder/: S99app  cryptkey.conf  cryptprog  detect_key.sh  exportscript.sh
led_server/: .gitignore
led_server/autotools/: Makefile.am  configure.ac
led_server/autotools/src/: S99app
led_server/autotools/src/led_server/: led_server.c
led_server/autotools/src/miniserver/: miniserver.c
old/embsys/labs/: CR_TP1_AUTRET_BERANGER .odt  CR_TP2_AUTRET_BERANGER .odt
old/embsys/labs/1_sysprog_part1/src/gps_reader/: core  gps_reader  reader.c
old/embsys/labs/1_sysprog_part1/src/ld_preload/: Makefile  hook.c  run.sh
old/embsys/labs/2_sysprog_part2/cr/: CompteRendu
old/embsys/labs/2_sysprog_part2/src/converter/: converter  converter.c
old/embsys/labs/2_sysprog_part2/src/forwarder/: forwarder  forwarder.c
old/embsys/labs/2_sysprog_part2/src/net_reader/: net_reader
old/embsys/labs/2_sysprog_part2/src/shm_reader/: handler.c  shm_reader  shm_reader.c
old/embsys/labs/2_sysprog_part2/src/shm_writer/: handler.c  shm_writer
old/embsys/labs/3_fs_discovery/: README.xml
old/embsys/labs/3_fs_discovery/cr/: CompteRendu  Makefile
old/embsys/labs/3_fs_discovery/rapport/: CompteRendu
old/embsys/labs/gps/: core
utils/: mysocket.c
